--- a/src/app/index-app/File/new-project/new-project.html
+++ b/src/app/index-app/File/new-project/new-project.html
@@ -4,146 +4,229 @@
         <p-accordion [multiple]="true">
             <p-accordionTab header="Header 1" [selected]="true">
                 <div class="row">
-            <form #myform1="ngForm">
-                <div class="ui-g">
-                    <div class="ui-g-3">
-                        <label class="flex-box">
+                    <form #myform1="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-3">
+                                <label class="flex-box">
                             <span class="text-exp">地点编码</span>
                             <input type="text">
                         </label>
-                    </div>
-                    <div class="ui-g-3">
-                        <label class="flex-box">
+                            </div>
+                            <div class="ui-g-3">
+                                <label class="flex-box">
                             <span class="text-exp">地点名称</span>
                             <input type="text">
                         </label>
-                    </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-            </form>
-        </div>
-            </p-accordionTab>
-            <p-accordionTab header="Header 2" [selected]="true">
                 <div class="row">
-            <form #myform2="ngForm">
-                <div class="ui-g">
-                    <div class="ui-g-3">
-                        <label class="flex-box">
+                    <form #myform2="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-3">
+                                <label class="flex-box">
                         <span class="text-exp">*地点编码</span>
                         <input type="text" required [(ngModel)]="model.name" name="name">
                     </label>
-                    </div>
-                    <div class="ui-g-3">
-                        <label class="flex-box">
+                            </div>
+                            <div class="ui-g-3">
+                                <label class="flex-box">
                         <span class="text-exp">*地点名称</span>
-                        <input type="text">
+                        <input type="text" required [(ngModel)]="model.address" name="address">
                     </label>
-                    </div>
-                    <div class="ui-g-3">
-                        <label class="flex-box">
+                            </div>
+                            <div class="ui-g-3">
+                                <label class="flex-box">
                         <span class="text-exp">*公司名称</span>
-                        <input type="text">
+                        <input type="text" required [(ngModel)]="model.gsmc" name="gsmc">
                     </label>
-                    </div>
-                    <div class="ui-g-3">
-                        <div class="flex-box">
-                            <span class="text-exp">*仓库级别</span>
-                            <div class="out-com">
-                                <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                            </div>
+                            <div class="ui-g-3">
+                                <div class="flex-box">
+                                    <span class="text-exp">*仓库级别</span>
+                                    <div class="out-com">
+                                        <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-            </form>
-        </div>
+            </p-accordionTab>
+            <p-accordionTab header="Header 2" [selected]="true">
+                <div class="row">
+                    <form #myform2="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-3">
+                                <label class="flex-box">
+                        <span class="text-exp">*地点编码</span>
+                        <input type="text" required [(ngModel)]="model.name" name="name">
+                    </label>
+                            </div>
+                            <div class="ui-g-3">
+                                <label class="flex-box">
+                        <span class="text-exp">*地点名称</span>
+                        <input type="text" required [(ngModel)]="model.address" name="address">
+                    </label>
+                            </div>
+                            <div class="ui-g-3">
+                                <label class="flex-box">
+                        <span class="text-exp">*公司名称</span>
+                        <input type="text" required [(ngModel)]="model.gsmc" name="gsmc">
+                    </label>
+                            </div>
+                            <div class="ui-g-3">
+                                <div class="flex-box">
+                                    <span class="text-exp">*仓库级别</span>
+                                    <div class="out-com">
+                                        <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="row">
+                    <form #myform3="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-4">
+                                <label class="flex-box">
+                            <span class="text-exp">*地点编码111</span>
+                            <input type="text">
+                        </label>
+                            </div>
+                            <div class="ui-g-4">
+                                <label class="flex-box">
+                            <span class="text-exp">*地点名称111</span>
+                            <input type="text">
+                        </label>
+                            </div>
+                            <div class="ui-g-4">
+                                <div class="flex-box">
+                                    <span class="text-exp">*仓库级别111</span>
+                                    <div class="out-com">
+                                        <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </p-accordionTab>
             <p-accordionTab header="Header 3" [selected]="true">
                 <div class="row">
-            <form #myform3="ngForm">
-                <div class="ui-g">
-                    <div class="ui-g-4">
-                        <label class="flex-box">
+                    <form #myform3="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-4">
+                                <label class="flex-box">
                             <span class="text-exp">*地点编码111</span>
                             <input type="text">
                         </label>
-                    </div>
-                    <div class="ui-g-4">
-                        <label class="flex-box">
+                            </div>
+                            <div class="ui-g-4">
+                                <label class="flex-box">
                             <span class="text-exp">*地点名称111</span>
                             <input type="text">
                         </label>
-                    </div>
-                    <div class="ui-g-4">
-                        <div class="flex-box">
-                            <span class="text-exp">*仓库级别111</span>
-                            <div class="out-com">
-                                <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                            </div>
+                            <div class="ui-g-4">
+                                <div class="flex-box">
+                                    <span class="text-exp">*仓库级别111</span>
+                                    <div class="out-com">
+                                        <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-            </form>
-        </div>
+                <div class="row">
+                    <form #myform4="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-6">
+                                <label class="flex-box">
+                            <span class="text-exp">*地点编码111</span>
+                            <input type="text">
+                        </label>
+                            </div>
+
+                            <div class="ui-g-6">
+                                <div class="flex-box">
+                                    <span class="text-exp">*仓库级别111</span>
+                                    <div class="out-com">
+                                        <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="row">
+                    <form #myform4="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-12">
+                                <label class="flex-box">
+                            <span class="text-exp">*地点编码111</span>
+                            <input type="text">
+                        </label>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </p-accordionTab>
             <p-accordionTab header="Header 4" [selected]="true">
                 <div class="row">
-            <form #myform4="ngForm">
-                <div class="ui-g">
-                    <div class="ui-g-6">
-                        <label class="flex-box">
+                    <form #myform4="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-6">
+                                <label class="flex-box">
                             <span class="text-exp">*地点编码111</span>
                             <input type="text">
                         </label>
-                    </div>
+                            </div>
 
-                    <div class="ui-g-6">
-                        <div class="flex-box">
-                            <span class="text-exp">*仓库级别111</span>
-                            <div class="out-com">
-                                <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                            <div class="ui-g-6">
+                                <div class="flex-box">
+                                    <span class="text-exp">*仓库级别111</span>
+                                    <div class="out-com">
+                                        <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-            </form>
-        </div>
             </p-accordionTab>
             <p-accordionTab header="Header 5" [selected]="true">
                 <div class="row">
-            <form #myform5="ngForm">
-                <div class="ui-g">
-                    <div class="ui-g-3">
-                        <label class="flex-box">
+                    <form #myform5="ngForm">
+                        <div class="ui-g">
+                            <div class="ui-g-3">
+                                <label class="flex-box">
                             <span class="text-exp">*地点编码111</span>
                             <input type="text">
                         </label>
-                    </div>
-                    <div class="ui-g-6">
-                        <label class="flex-box">
+                            </div>
+                            <div class="ui-g-6">
+                                <label class="flex-box">
                             <span class="text-exp">*地点名称111</span>
                             <input type="text">
                         </label>
-                    </div>
-                    <div class="ui-g-3">
-                        <div class="flex-box">
-                            <span class="text-exp">*仓库级别111</span>
-                            <div class="out-com">
-                                <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                            </div>
+                            <div class="ui-g-3">
+                                <div class="flex-box">
+                                    <span class="text-exp">*仓库级别111</span>
+                                    <div class="out-com">
+                                        <p-dropdown [options]="ckbj" [(ngModel)]="selected" name="CKID"></p-dropdown>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-            </form>
-        </div>
             </p-accordionTab>
         </p-accordion>
-        
-        <!--<div class="ui-g tabs-wrap row">
-            <ul class="tabs">
-                <li class="tabs-selected">
-                    <a href="javascript:void(0)" class="tabs-inner">编辑地点信息</a>
-                </li>
-            </ul>
-        </div>-->
-            
+
     </div>
 </div>
