--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -36,11 +36,11 @@ a{
 }
 /*-----ng-form------------*/
 .ng-valid[required], .ng-valid.required  {
-  border-left: 5px solid #42A948!important; /* green */
+  border-left: 3px solid #42A948!important; /* green */
 }
 
 .ng-invalid:not(form)  {
-  border-left: 5px solid #a94442!important; /* red */
+  border-left: 3px solid #a94442!important; /* red */
 }
 
 /*------ui-g reset------------*/
@@ -60,6 +60,9 @@ a{
 }
 .ui-accordion .ui-accordion-content{
     overflow: inherit!important;
+}
+.ui-accordion .ui-accordion-content{
+    padding: 0!important;
 }
 /*-------content------- */
 .content-wrap{
@@ -83,9 +86,9 @@ input[type="text"],input[type="password"]{
     text-indent: 4px;
     flex: 1;
 }
-/*.row{
-    margin-top: 15px;
-}*/
+.row{
+    margin-bottom: 15px;
+}
 .content .ui-g .text-exp{
     display: block;
     float: left;
