--- a/src/app/index-app/File/new-other/new-other.html
+++ b/src/app/index-app/File/new-other/new-other.html
@@ -1,1 +1,158 @@
-<h1>new-other</h1>
+<div class="content-wrap">
+    <div class="content">
+        <toolbar style="width:100%" [searchData]="searchData" (Ondata)="cancelDataEvent($event)"></toolbar>
+        <div class="row">
+            <form #searchForm="ngForm">
+                <div class="ui-g container-wrap">
+                    <div class="ui-g-3">
+                        <label class="flex-box">
+                            <span class="text-exp">公司编码</span>
+                            <input type="text" name="GSID" [(ngModel)]="searchData.data.pdata.GSID" />
+                        </label>
+                    </div>
+                    <div class="ui-g-3">
+                        <label class="flex-box">
+                            <span class="text-exp">公司名称</span>
+                            <input type="text" name="GSMC" [(ngModel)]="searchData.data.pdata.GSMC" />
+                        </label>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="row">
+            <p-panel header="编辑公司信息" [toggleable]="true">
+                <form #dataForm="ngForm">
+                    <div class="ui-g row">
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*公司编码</span>
+                                    <input type="text" name="GSID" required [(ngModel)]="model.GSID" />
+                            </label>
+                        </div>
+                        <div class="ui-g-6">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*公司名称</span>
+                                    <input type="text" name="GSMC" required [(ngModel)]="model.GSMC" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*公司简称</span>
+                                    <input type="text" name="GSJC" required [(ngModel)]="model.GSJC" />
+                            </label>
+                        </div>
+                    </div>
+                    <div class="ui-g row">
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >公司英文名称</span>
+                                    <input type="text" name="GSYWMC" [(ngModel)]="model.GSYWMC" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*国家名称</span>
+                                    <input type="text" name="GJID" required [(ngModel)]="model.GJID" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*省份名称</span>
+                                    <input type="text" name="SFID" required [(ngModel)]="model.SFID" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*城市名称</span>
+                                    <input type="text" name="CSID" required [(ngModel)]="model.CSID" />
+                            </label>
+                        </div>
+                    </div>
+                    <div class="ui-g row">
+                        <div class="ui-g-6">
+                            <label class="flex-box">
+                                    <span class="text-exp">*注册地址</span>
+                                    <input type="text" name="ZCDZ" required [(ngModel)]="model.ZCDZ" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp">邮政编码</span>
+                                    <input type="text" name="YZBM" [(ngModel)]="model.YZBM" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*税号</span>
+                                    <input type="text" name="GSSH" required [(ngModel)]="model.GSSH" />
+                            </label>
+                        </div>
+                    </div>
+                    <div class="ui-g row">
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp">*开户银行</span>
+                                    <input type="text" name="GSKHYH" required [(ngModel)]="model.GSKHYH" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp">*公司账号</span>
+                                    <input type="text" name="GSZH" required [(ngModel)]="model.GSZH" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*联系人</span>
+                                    <input type="text" name="LXR" required [(ngModel)]="model.LXR" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*联系电话</span>
+                                    <input type="text" name="LXDH" required [(ngModel)]="model.LXDH" />
+                            </label>
+                        </div>
+                    </div>
+                    <div class="ui-g row">
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp">*手机号码</span>
+                                    <input type="text" name="SJHM" required [(ngModel)]="model.SJHM" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp">备注</span>
+                                    <input type="text" name="BZ" [(ngModel)]="model.BZ" />
+                            </label>
+                        </div>
+                        <div class="ui-g-3">
+                            <label class="flex-box">
+                                    <span class="text-exp" >*有效标记</span>
+                                    <p-checkbox  binary="false" name="YXBJ" [(ngModel)]="model.YXBJ"></p-checkbox>
+                            </label>
+                        </div>
+                    </div>
+                </form>
+            </p-panel>
+        </div>
+        <div class="row">
+            <p-panel header="查询结果" [toggleable]="true">
+                <p-dataTable [value]="cancelData" [rows]="10" [paginator]="true" [pageLinks]="3" [rowsPerPageOptions]="[5,10,20]" [emptyMessage]="''">
+                    <p-column field="GSID" header="公司编码"></p-column>
+                    <p-column field="GSMC" header="公司名称"></p-column>
+                    <p-column field="ZCDZ" header="注册地址"></p-column>
+                    <p-column field="YZBM" header="邮政编码"></p-column>
+                    <p-column field="GSSH" header="税号"></p-column>
+                    <p-column field="GSKHYH" header="开户银行"></p-column>
+                    <p-column field="GSZH" header="账号"></p-column>
+                    <p-column field="LXR" header="联系人"></p-column>
+                    <p-column field="LXDH" header="联系电话"></p-column>
+                    <p-column field="SJHM" header="手机号码"></p-column>
+                    <p-column field="BZ" header="备注"></p-column>
+                </p-dataTable>
+            </p-panel>
+        </div>
+    </div>
+</div>
