--- a/src/app/index-app/index-app.css
+++ b/src/app/index-app/index-app.css
@@ -4,66 +4,75 @@
 * @Last Modified by:   anchen
 * @Last Modified time: 2016-11-23 16:36:54
 */
-header,section,footer{
-    box-sizing: border-box;
+
+header,
+section,
+footer {
+  box-sizing: border-box;
 }
-.app-header{
-    width:100%;
-    height: 70px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: #fff;
-    z-index: 9999;
+
+.app-header {
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #fff;
+  z-index: 9999;
 }
-.app-aside{
-    width: 200px;
-    position: fixed;
-    top: 70px;
-    left: 0;
-    bottom: 30px;
-    /*background-color: #fafafa;
+
+.app-aside {
+  width: 200px;
+  position: fixed;
+  top: 70px;
+  left: 0;
+  bottom: 30px;
+  /*background-color: #fafafa;
     border-right: 1px solid #e4e4e4;*/
-    background-color: #fff;
-    border-right: 1px solid #d3d3d3;
-    z-index: 9999;
+  background-color: #fff;
+  border-right: 1px solid #d3d3d3;
+  z-index: 9999;
 }
-.app-container{
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
-    padding-top: 142px;
-    padding-left: 200px;
-    padding-bottom: 30px;
-    overflow: auto;
-    position: relative;
+
+.app-container {
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 142px;
+  padding-left: 200px;
+  padding-bottom: 30px;
+  overflow: auto;
+  position: relative;
 }
-.app-footer{
-    height: 30px;
-    line-height: 30px;
-    position: absolute;
-    bottom: 0;
-    left: 0px;
-    right: 0;
-    text-align: center;
-    padding: 0;
-    color: rgb(102, 102, 102);
-    background-color: rgb(242, 242, 242);
-    border-top: 1px solid rgb(221, 221, 221);
-    z-index: 999;
+
+.app-footer {
+  height: 30px;
+  line-height: 30px;
+  position: absolute;
+  bottom: 0;
+  left: 0px;
+  right: 0;
+  text-align: center;
+  padding: 0;
+  color: rgb(102, 102, 102);
+  background-color: rgb(242, 242, 242);
+  border-top: 1px solid rgb(221, 221, 221);
+  z-index: 999;
 }
 
 
 /*--------loading---------*/
-.sk-circle-wrap{
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,.2);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 99;
+
+.sk-circle-wrap {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99;
 }
+
 .sk-circle {
   width: 40px;
   height: 40px;
@@ -73,6 +82,7 @@ header,section,footer{
   margin-top: -20px;
   margin-left: -20px;
 }
+
 .sk-circle .sk-child {
   width: 100%;
   height: 100%;
@@ -80,6 +90,7 @@ header,section,footer{
   left: 0;
   top: 0;
 }
+
 .sk-circle .sk-child:before {
   content: '';
   display: block;
@@ -89,102 +100,152 @@ header,section,footer{
   background-color: #333;
   border-radius: 100%;
   -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
-          animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+  animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
 }
+
 .sk-circle .sk-circle2 {
   -webkit-transform: rotate(30deg);
-      -ms-transform: rotate(30deg);
-          transform: rotate(30deg); }
+  -ms-transform: rotate(30deg);
+  transform: rotate(30deg);
+}
+
 .sk-circle .sk-circle3 {
   -webkit-transform: rotate(60deg);
-      -ms-transform: rotate(60deg);
-          transform: rotate(60deg); }
+  -ms-transform: rotate(60deg);
+  transform: rotate(60deg);
+}
+
 .sk-circle .sk-circle4 {
   -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg); }
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
 .sk-circle .sk-circle5 {
   -webkit-transform: rotate(120deg);
-      -ms-transform: rotate(120deg);
-          transform: rotate(120deg); }
+  -ms-transform: rotate(120deg);
+  transform: rotate(120deg);
+}
+
 .sk-circle .sk-circle6 {
   -webkit-transform: rotate(150deg);
-      -ms-transform: rotate(150deg);
-          transform: rotate(150deg); }
+  -ms-transform: rotate(150deg);
+  transform: rotate(150deg);
+}
+
 .sk-circle .sk-circle7 {
   -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg); }
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
 .sk-circle .sk-circle8 {
   -webkit-transform: rotate(210deg);
-      -ms-transform: rotate(210deg);
-          transform: rotate(210deg); }
+  -ms-transform: rotate(210deg);
+  transform: rotate(210deg);
+}
+
 .sk-circle .sk-circle9 {
   -webkit-transform: rotate(240deg);
-      -ms-transform: rotate(240deg);
-          transform: rotate(240deg); }
+  -ms-transform: rotate(240deg);
+  transform: rotate(240deg);
+}
+
 .sk-circle .sk-circle10 {
   -webkit-transform: rotate(270deg);
-      -ms-transform: rotate(270deg);
-          transform: rotate(270deg); }
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
+
 .sk-circle .sk-circle11 {
   -webkit-transform: rotate(300deg);
-      -ms-transform: rotate(300deg);
-          transform: rotate(300deg); }
+  -ms-transform: rotate(300deg);
+  transform: rotate(300deg);
+}
+
 .sk-circle .sk-circle12 {
   -webkit-transform: rotate(330deg);
-      -ms-transform: rotate(330deg);
-          transform: rotate(330deg); }
+  -ms-transform: rotate(330deg);
+  transform: rotate(330deg);
+}
+
 .sk-circle .sk-circle2:before {
   -webkit-animation-delay: -1.1s;
-          animation-delay: -1.1s; }
+  animation-delay: -1.1s;
+}
+
 .sk-circle .sk-circle3:before {
   -webkit-animation-delay: -1s;
-          animation-delay: -1s; }
+  animation-delay: -1s;
+}
+
 .sk-circle .sk-circle4:before {
   -webkit-animation-delay: -0.9s;
-          animation-delay: -0.9s; }
+  animation-delay: -0.9s;
+}
+
 .sk-circle .sk-circle5:before {
   -webkit-animation-delay: -0.8s;
-          animation-delay: -0.8s; }
+  animation-delay: -0.8s;
+}
+
 .sk-circle .sk-circle6:before {
   -webkit-animation-delay: -0.7s;
-          animation-delay: -0.7s; }
+  animation-delay: -0.7s;
+}
+
 .sk-circle .sk-circle7:before {
   -webkit-animation-delay: -0.6s;
-          animation-delay: -0.6s; }
+  animation-delay: -0.6s;
+}
+
 .sk-circle .sk-circle8:before {
   -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s; }
+  animation-delay: -0.5s;
+}
+
 .sk-circle .sk-circle9:before {
   -webkit-animation-delay: -0.4s;
-          animation-delay: -0.4s; }
+  animation-delay: -0.4s;
+}
+
 .sk-circle .sk-circle10:before {
   -webkit-animation-delay: -0.3s;
-          animation-delay: -0.3s; }
+  animation-delay: -0.3s;
+}
+
 .sk-circle .sk-circle11:before {
   -webkit-animation-delay: -0.2s;
-          animation-delay: -0.2s; }
+  animation-delay: -0.2s;
+}
+
 .sk-circle .sk-circle12:before {
   -webkit-animation-delay: -0.1s;
-          animation-delay: -0.1s; }
+  animation-delay: -0.1s;
+}
 
 @-webkit-keyframes sk-circleBounceDelay {
-  0%, 80%, 100% {
+  0%,
+  80%,
+  100% {
     -webkit-transform: scale(0);
-            transform: scale(0);
-  } 40% {
+    transform: scale(0);
+  }
+  40% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
 
 @keyframes sk-circleBounceDelay {
-  0%, 80%, 100% {
+  0%,
+  80%,
+  100% {
     -webkit-transform: scale(0);
-            transform: scale(0);
-  } 40% {
+    transform: scale(0);
+  }
+  40% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
