--- a/src/app/shared/dymaic-form/base.component.html
+++ b/src/app/shared/dymaic-form/base.component.html
@@ -1,27 +1,29 @@
-<div *ngIf="field.type == 'text'" [ngClass]="field.class" class="mb8">
-    <label class="flex-box">
-            <span class="text-exp" >{{field.title}}</span>
-            <input type="text" [required]="field.required" [attr.name]="field.name" [(ngModel)]="model" ngModel name="{{field.name}}" />
+<div [formGroup]="form" [ngClass]="field.ElemClass" class="mb8">
+    <div *ngIf="field.controlType == 'text'">
+        <label class="flex-box">
+            <span class="text-exp" >{{field.controlTitle}}</span>
+            <input [type]="field.controlType" [required]="field.required" [formControlName]="field.controlName" />
         </label>
-</div>
-<div *ngIf="field.type == 'select'" [ngClass]="field.class" class="mb8">
-    <div class="flex-box">
-        <span class="text-exp">{{field.title}}</span>
-        <div class="out-com">
-            <p-dropdown [options]="field.options" [(ngModel)]="model" [attr.name]="field.name" ngModel></p-dropdown>
+    </div>
+    <!--<div *ngIf="field.controlType == 'select'">
+        <div class="flex-box">
+            <span class="text-exp">{{field.controlTitle}}</span>
+            <div class="out-com">
+                <p-dropdown [options]="field.Selectoptions" [(ngModel)]="model" [attr.name]="field.controlName" ngModel [formControlName]="field.controlName"></p-dropdown>
+            </div>
         </div>
     </div>
-</div>
-<div *ngIf="field.type == 'checkbox'" [ngClass]="field.class" class="mb8">
-    <div class="flex-box">
-        <span class="text-exp">{{field.title}}</span>
-        <p-checkbox binary="false" [attr.name]="field.name" [(ngModel)]="model" ngModel style="margin-top:2px"></p-checkbox>
+    <div *ngIf="field.controlType == 'checkbox'">
+        <div class="flex-box">
+            <span class="text-exp">{{field.controlTitle}}</span>
+            <p-checkbox binary="false" [attr.name]="field.controlName" [(ngModel)]="model" ngModel style="margin-top:2px" [formControlName]="field.controlName"></p-checkbox>
+        </div>
     </div>
-</div>
-<div *ngIf="field.type == 'date'" [ngClass]="field.class" class="mb8">
-    <div class="flex-box">
-        <span class="text-exp">{{field.title}}</span>
-        <p-calendar [(ngModel)]="model" [showIcon]="true"></p-calendar>
-    </div>
+    <div *ngIf="field.controlType == 'date'">
+        <div class="flex-box">
+            <span class="text-exp">{{field.controlTitle}}</span>
+            <p-calendar [(ngModel)]="model" [showIcon]="true" [formControlName]="field.controlName"></p-calendar>
+        </div>
 
+    </div>-->
 </div>
