--- a/src/app/shared/dymaic-form/base.component.html
+++ b/src/app/shared/dymaic-form/base.component.html
@@ -1,4 +1,3 @@
-
 <div [formGroup]="form" [ngClass]="field.ElemClass" class="mb8">
     <div *ngIf="field.controlType == 'text'">
         <label class="flex-box">
@@ -6,7 +5,7 @@
             <input [type]="field.controlType" [required]="field.required" [formControlName]="field.controlName" />
         </label>
     </div>
-    <!--<div *ngIf="field.controlType == 'select'">
+    <div *ngIf="field.controlType == 'select'">
         <div class="flex-box">
             <span class="text-exp">{{field.controlTitle}}</span>
             <div class="out-com">
@@ -26,5 +25,5 @@
             <p-calendar [showIcon]="true" [formControlName]="field.controlName"></p-calendar>
         </div>
 
-    </div>-->
+    </div>
 </div>
