--- a/src/app/index-app/File/new-other/new-other.html
+++ b/src/app/index-app/File/new-other/new-other.html
@@ -21,119 +21,10 @@
         </div>
         <div class="row">
             <p-panel header="编辑公司信息" [toggleable]="true">
-                <form #dataForm="ngForm">
-                    <div class="ui-g row">
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*公司编码</span>
-                                    <input type="text" name="GSID" required [(ngModel)]="model.GSID" />
-                            </label>
-                        </div>
-                        <div class="ui-g-6">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*公司名称</span>
-                                    <input type="text" name="GSMC" required [(ngModel)]="model.GSMC" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*公司简称</span>
-                                    <input type="text" name="GSJC" required [(ngModel)]="model.GSJC" />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="ui-g row">
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >公司英文名称</span>
-                                    <input type="text" name="GSYWMC" [(ngModel)]="model.GSYWMC" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*国家名称</span>
-                                    <input type="text" name="GJID" required [(ngModel)]="model.GJID" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*省份名称</span>
-                                    <input type="text" name="SFID" required [(ngModel)]="model.SFID" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*城市名称</span>
-                                    <input type="text" name="CSID" required [(ngModel)]="model.CSID" />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="ui-g row">
-                        <div class="ui-g-6">
-                            <label class="flex-box">
-                                    <span class="text-exp">*注册地址</span>
-                                    <input type="text" name="ZCDZ" required [(ngModel)]="model.ZCDZ" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp">邮政编码</span>
-                                    <input type="text" name="YZBM" [(ngModel)]="model.YZBM" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*税号</span>
-                                    <input type="text" name="GSSH" required [(ngModel)]="model.GSSH" />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="ui-g row">
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp">*开户银行</span>
-                                    <input type="text" name="GSKHYH" required [(ngModel)]="model.GSKHYH" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp">*公司账号</span>
-                                    <input type="text" name="GSZH" required [(ngModel)]="model.GSZH" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*联系人</span>
-                                    <input type="text" name="LXR" required [(ngModel)]="model.LXR" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*联系电话</span>
-                                    <input type="text" name="LXDH" required [(ngModel)]="model.LXDH" />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="ui-g row">
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp">*手机号码</span>
-                                    <input type="text" name="SJHM" required [(ngModel)]="model.SJHM" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp">备注</span>
-                                    <input type="text" name="BZ" [(ngModel)]="model.BZ" />
-                            </label>
-                        </div>
-                        <div class="ui-g-3">
-                            <label class="flex-box">
-                                    <span class="text-exp" >*有效标记</span>
-                                    <p-checkbox  binary="false" name="YXBJ" [(ngModel)]="model.YXBJ"></p-checkbox>
-                            </label>
-                        </div>
-                    </div>
+                <form [formGroup]="form" *ngIf="lock">
+                    <ng-container *ngFor="let FormData of FormDatas">
+                        <form-base [field]="FormData" [form]="form"></form-base>
+                    </ng-container>
                 </form>
             </p-panel>
         </div>
